--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
         </p>
         <a href="#" class="btn">Begin Your Journey</a>
         <a href="#" class="btn">Find a Local Chapter</a>
+        <a href="pages/bylaws.html" class="btn">Read Full Bylaws</a>
       </div>
 
       <footer>
